chore:(stock): improve code quality and test coverage (SonarQube + JaCoCo validated)