@@ -1,20 +1,18 @@
 package com.github.im2back.stockms.amqp.listner;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.amqp.rabbit.annotation.RabbitListener;
 import org.springframework.messaging.handler.annotation.Payload;
 import org.springframework.stereotype.Component;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.JsonMappingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.github.im2back.stockms.amqp.publish.PublishCustomerReprocessHistory;
 import com.github.im2back.stockms.model.dto.inputdata.PurchaseRequestDTO;
 import com.github.im2back.stockms.model.dto.outputdata.PurchaseHistoryDTO;
-import com.github.im2back.stockms.model.dto.outputdata.UpdatedStockResponseDTO;
 import com.github.im2back.stockms.model.dto.outputdata.UpdatedProducts;
+import com.github.im2back.stockms.model.dto.outputdata.UpdatedStockResponseDTO;
 import com.github.im2back.stockms.service.ProductService;
 
 import lombok.RequiredArgsConstructor;
@@ -27,7 +25,7 @@ public class OrchestratorUpdateStockReprocessListner {
 	private final PublishCustomerReprocessHistory customerReprocessHistory;
 	
 	@RabbitListener(queues = "stock.update.queue")
-	public void receiveMessages(@Payload String msg) throws JsonMappingException, JsonProcessingException {
+	public void receiveMessages(@Payload String msg) throws  JsonProcessingException {
 
 		PurchaseRequestDTO purchaseRequestDTO = convert(msg);
 		List<UpdatedStockResponseDTO> response = this.productService.updateQuantityProductsAfterPurchase(purchaseRequestDTO.purchasedItems());
@@ -35,7 +33,7 @@ public class OrchestratorUpdateStockReprocessListner {
 		this.customerReprocessHistory.sendReprocessSaveHistory(purchaseHistoryDTO);
 	}
 	
-	private PurchaseRequestDTO convert(String payload) throws JsonMappingException, JsonProcessingException {
+	private PurchaseRequestDTO convert(String payload) throws  JsonProcessingException {
 		var mapper = new ObjectMapper();
 		 return mapper.readValue(payload, PurchaseRequestDTO.class);
 	}
@@ -43,12 +41,8 @@ public class OrchestratorUpdateStockReprocessListner {
 	private PurchaseHistoryDTO assemblePurchaseHistoryDTO(PurchaseRequestDTO dto, List<UpdatedStockResponseDTO> stockUpdateResponseDTOList) {
 		
 		List<UpdatedProducts> products = stockUpdateResponseDTOList.stream()
-			    .map(t -> new UpdatedProducts(t.name(), t.price(), t.code(), t.quantity()))
-			    .collect(Collectors.toList());
+			    .map(t -> new UpdatedProducts(t.name(), t.price(), t.code(), t.quantity())).toList();
 		
-		PurchaseHistoryDTO purchaseHistoryDTO = new PurchaseHistoryDTO(dto.document(), products);
-		
-		return purchaseHistoryDTO;
+		return  new PurchaseHistoryDTO(dto.document(), products);
 	}
-
 }
